update okd post

--- a/_posts/2019-12-29-okd-311.md
+++ b/_posts/2019-12-29-okd-311.md
@@ -66,14 +66,115 @@ Prerequisites:
 
  I will use the following servers:
 
- master-01.mmagnani.lab - 10.0.0.80
- master-02.mmagnani.lab - 10.0.0.81
- master-03.mmagnani.lab - 10.0.0.82
- node-01.mmagnani.lab   - 10.0.0.83
- node-02.mmagnani.lab   - 10.0.0.84
- infra-01.mmagnani.lab  - 10.0.0.85
- infra-02.mmagnani.lab  - 10.0.0.86
- balancer.mmagnani.lab  - 10.0.0.87
- bastion.mmagnani.lab   - 10.0.0.116
+ * master-01.mmagnani.lab - 10.0.0.80
+ * master-02.mmagnani.lab - 10.0.0.81
+ * master-03.mmagnani.lab - 10.0.0.82
+ * node-01.mmagnani.lab   - 10.0.0.83
+ * node-02.mmagnani.lab   - 10.0.0.84
+ * infra-01.mmagnani.lab  - 10.0.0.85
+ * infra-02.mmagnani.lab  - 10.0.0.86
+ * balancer.mmagnani.lab  - 10.0.0.87
+ * bastion.mmagnani.lab   - 10.0.0.116
+
+We will execute all commands from the "bastion.mmagnani.lab" server, as the name already says it will be our central execution point. The first step of course is to install Ansible and create our inventory so that commands can be executed on all nodes:
+
+{% highlight bash %}
+[root@bastion ~]# yum update -y
+[root@bastion ~]# yum install https://releases.ansible.com/ansible/rpm/release/epel-7-x86_64/ansible-2.6.9-1.el7.ans.noarch.rpm -y
+[root@bastion ~]# mkdir -p /root/workspace/okd
+[root@bastion ~]# cd /root/workspace/okd
+[root@bastion ~]# vi inventory
+
+[all]
+master-01.mmagnani.lab
+master-02.mmagnani.lab
+master-03.mmagnani.lab
+node-01.mmagnani.lab
+node-02.mmagnani.lab
+infra-01.mmagnani.lab
+infra-02.mmagnani.lab
+balancer.mmagnani.lab
+
+[root@bastion ~]# ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa
+[root@bastion ~]# ssh-copy-id master-01.mmagnani.lab
+[root@bastion ~]# ssh-copy-id master-02.mmagnani.lab
+[root@bastion ~]# ssh-copy-id master-03.mmagnani.lab
+[root@bastion ~]# ssh-copy-id node-01.mmagnani.lab 
+[root@bastion ~]# ssh-copy-id node-02.mmagnani.lab 
+[root@bastion ~]# ssh-copy-id infra-01.mmagnani.lab 
+[root@bastion ~]# ssh-copy-id infra-02.mmagnani.lab 
+[root@bastion ~]# ssh-copy-id balancer.mmagnani.lab 
+{% endhighlight %}
+
+We now have access to execute commands on all nodes using Ansible. You can test by pinging:
+
+{% highlight bash %}
+[root@bastion ~]# ansible all -i inventory -m ping
+master-02.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+node-01.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+infra-01.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+infra-02.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+balancer.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+node-02.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+master-03.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+master-01.mmagnani.lab | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+{% endhighlight %}
+
+Update all nodes, run:
+
+{% highlight bash %}
+[root@bastion ~]# ansible all -i inventory -m shell -a "yum update -y"
+{% endhighlight %}
+
+Selinux must be enforcing on all nodes, run:
+
+{% highlight bash %}
+[root@bastion ~]# ansible all -i inventory -m shell -a "getenforce"
+{% endhighlight %}
+
+Firewalld in this case must be disabled on all nodes, run: 
+
+{% highlight bash %}
+[root@bastion ~]# ansible all -i inventory -m shell -a "systemctl stop firewalld"
+[root@bastion ~]# ansible all -i inventory -m shell -a "systemctl disable firewalld"
+{% endhighlight %}
+
+Install EPEL repo on all nodes, run:
+
+{% highlight bash %}
+[root@bastion ~]# ansible all -i inventory -m shell -a "yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -y"
+[root@bastion ~]# ansible all -i inventory -m shell -a "sed -i -e "s/^enabled=1/enabled=0/" /etc/yum.repos.d/epel.repo"
+{% endhighlight %}
+
+Install the following packages on all nodes:
+
+{% highlight bash %}
+[root@bastion ~]# ansible all -i inventory -m shell -a "yum install wget git net-tools bind-utils yum-utils iptables-services bridge-utils bash-completion kexec-tools sos psacct -y"
+[root@bastion ~]# ansible all -i inventory -m shell -a "yum -y --enablerepo=epel install pyOpenSSL -y"
+{% endhighlight %}
 
 Best,#WIP
