update okd post

--- a/_posts/2019-12-29-okd-311.md
+++ b/_posts/2019-12-29-okd-311.md
@@ -177,4 +177,115 @@ Install the following packages on all nodes:
 [root@bastion ~]# ansible all -i inventory -m shell -a "yum -y --enablerepo=epel install pyOpenSSL -y"
 {% endhighlight %}
 
+On all nodes there is a disk "/dev/sdb" that will be used by the docker:
+
+{% highlight bash %}
+[root@bastion ~]# ansible all -i inventory -m shell -a "yum install docker-1.13.1 -y"
+[root@bastion ~]# ansible all -i inventory -m shell -a "pvcreate /dev/sdb"
+[root@bastion ~]# ansible all -i inventory -m shell -a "vgcreate docker_vol /dev/sdb"
+[root@bastion ~]# ansible all -i inventory -m shell -a "echo 'VG="docker_vol"' > /etc/sysconfig/docker-storage-setup"
+[root@bastion ~]# ansible all -i inventory -m shell -a "docker-storage-setup"
+[root@bastion ~]# ansible all -i inventory -m shell -a "systemctl enable docker"
+[root@bastion ~]# ansible all -i inventory -m shell -a "systemctl start docker"
+{% endhighlight %}
+
+Now clone the openshift-ansible repository:
+
+[root@bastion ~]# pwd
+/root/workspace/okd
+[root@bastion ~]# git clone https://github.com/openshift/openshift-ansible.git
+[root@bastion ~]# cd openshift-ansible
+[root@bastion ~]# git checkout release-3.11
+
+Now one of the most important steps. Configure "/etc/ansible/hosts" that defines how Openshift will be installed:
+
+{% highlight bash %}
+[root@bastion ~]# vi /etc/ansible/hosts
+{% endhighlight %}
+{% highlight yaml %}
+[OSEv3:children]
+masters
+nodes
+etcd
+lb
+
+[OSEv3:vars]
+
+ansible_become=yes
+ansible_ssh_user=root
+
+openshift_deployment_type=origin
+deployment_type=origin
+
+openshift_master_default_subdomain=cloudapps.mmagnani.lab
+
+openshift_master_cluster_method=native
+openshift_master_cluster_hostname=openshift-cluster.mmagnani.lab
+openshift_master_cluster_public_hostname=openshift-cluster.mmagnani.lab
+
+osm_use_cockpit=true
+openshift_clock_enabled=true
+
+openshift_docker_options='--selinux-enabled --insecure-registry 172.30.0.0/16'
+
+osm_default_node_selector='node-role.kubernetes.io/compute=true'
+openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider'}]
+openshift_master_htpasswd_users={'admin': '$apr1$LDUvvylp$sOP3cx4rTgyNpkPGtaULx.'}
+
+openshift_disable_check=disk_availability,docker_storage,memory_availability,package_version
+openshift_enable_unsupported_configurations=True
+openshift_cluster_monitoring_operator_install=false
+
+osm_default_node_selector='node-role.kubernetes.io/compute=true'
+
+openshift_hosted_router_replicas=2
+openshift_router_selector='node-role.kubernetes.io/infra=true'
+
+[masters]
+master-01.mmagnani.lab
+master-02.mmagnani.lab
+master-03.mmagnani.lab
+
+[etcd]
+master-01.mmagnani.lab
+master-02.mmagnani.lab
+master-03.mmagnani.lab
+
+[lb]
+balancer.mmagnani.lab
+
+[nodes]
+master-01.mmagnani.lab openshift_node_group_name='node-config-master'
+master-02.mmagnani.lab openshift_node_group_name='node-config-master'
+master-03.mmagnani.lab openshift_node_group_name='node-config-master'
+node-01.mmagnani.lab openshift_node_group_name='node-config-compute'
+node-02.mmagnani.lab openshift_node_group_name='node-config-compute'
+infra-01.mmagnani.lab openshift_node_group_name='node-config-infra'
+infra-02.mmagnani.lab openshift_node_group_name='node-config-infra'
+{% endhighlight %}
+
+If you want to know in detail about each parameter, check the documentation: [Openshift Doc](https://docs.openshift.com/container-platform/3.11/install/configuring_inventory_file.html)
+
+Now create the entries for DNS, this is very important.
+
+For the parameter "openshift_master_default_subdomain=cloudapps.mmagnani.lab, should be creating a "wildcard" pointing to where the routers will be deployed, which in this case will be infra-01 and infra-02.
+
+*.cloudapps - 10.0.0.85 and 10.0.0.86
+
+For the parameters "openshift_master_cluster_hostname=openshift-cluster.mmagnani.lab" and "openshift_master_cluster_public_hostname=openshift-cluster.mmagnani.lab" 
+
+You must create an entry pointing to the name "balancer.mmagnani.lab"
+
+openshift-cluster.mmagnani.lab - 10.0.0.87
+
+Now you are probably ready to begin the installation of Openshift. Run the "prerequisites" playbook:
+
+{% highlight bash %}
+[root@bastion ~]# pwd
+/root/workspace/okd/openshift-ansible
+[root@bastion ~]#  ansible-playbook playbooks/prerequisites.yml
+{% endhighlight %}
+
+
+
 Best,#WIP
