update okd post

--- a/_posts/2019-12-29-okd-311.md
+++ b/_posts/2019-12-29-okd-311.md
@@ -286,6 +286,12 @@ Now you are probably ready to begin the installation of Openshift. Run the "prer
 [root@bastion ~]#  ansible-playbook playbooks/prerequisites.yml
 {% endhighlight %}
 
+If all went well, run the installation playbook:
 
+{% highlight bash %}
+[root@bastion ~]# pwd
+/root/workspace/okd/openshift-ansible
+[root@bastion ~]#  ansible-playbook playbooks/deploy_cluster.yml
+{% endhighlight %}
 
 Best,#WIP
