finish wildfly post

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Building a Mission-Critical Open Source Environment for the Java Platform - Chapter IV-#WIP
+title: Building a Mission-Critical Open Source Environment for the Java Platform - Chapter IV
 tags: [jboss, wildfly, ha, redhat, centos, modcluster]
 comments: true
 ---
@@ -293,7 +293,7 @@ Now edit the Prometheus configuration and add our target:
 Create a alarm definition:
 
 {% highlight bash %}
-[root@monitor ~]# vi /etc/prometheus/alert.rules.yml
+[root@monitor ~]# vi /etc/prometheus/prometheus.rules.yml
 
 groups:
 - name: alert.rules
@@ -306,15 +306,14 @@ groups:
     annotations:
       summary: "Endpoint  down"
 
-[root@monitor ~]# chown prometheus:prometheus /etc/prometheus/alert.rules.yml
-[root@monitor ~]# promtool check rules /etc/prometheus/alert.rules.yml
+[root@monitor ~]# chown prometheus:prometheus /etc/prometheus/prometheus.rules.yml
+[root@monitor ~]# promtool check rules /etc/prometheus/prometheus.rules.yml
 [root@monitor ~]# systemctl restart prometheus
 {% endhighlight %}
 
 Please note that the Prometheus Target definitions already display our probe:
 
 ![](/images/201912-hawildfly-23.png)
-
 
 Finally install AlertManager.
 
@@ -342,7 +341,7 @@ route:
 receivers:
   - name: default-receiver
     webhook_configs:
-      - url: "http://monitor.mmagnani.lab:9000/hooks/scale-wildfly"
+      - url: "http://monitor.mm{% highlight bash %}agnani.lab:9000/hooks/scale-wildfly"
 
 [root@monitor ~]# chown alertmanager:alertmanager -R /etc/alertmanager
 [root@monitor ~]# vi /etc/systemd/system/alertmanager.service
@@ -364,6 +363,8 @@ WantedBy=multi-user.target
 
 [root@monitor ~]# vi /etc/prometheus/prometheus.yml
 
+rule_files:
+  - 'prometheus.rules.yml
 alerting:
   alertmanagers:
   - static_configs:
@@ -374,9 +375,67 @@ alerting:
 [root@monitor ~]# systemctl restart alertmanager
 {% endhighlight %}
 
+Note that the alert will be inactive: http://monitor.mmagnani.lab:9090/alerts
+
+![](/images/201912-hawildfly-24.png)
+
+Check the AlertManager: http://monitor.mmagnani.lab:9093/#/alerts
+
+![](/images/201912-hawildfly-25.png)
 
 Let's stop all instances of the marketing group to make sure the app is down. 
 
-#WIP TODO AlertManager Review
+When we stop instances the application will be "down" and our alert will be firing.
+
+![](/images/201912-hawildfly-26.png)
+
+![](/images/201912-hawildfly-27.png)
+
+![](/images/201912-hawildfly-28.png)
+
+Our endpoint that performs environment scaling will be triggered:
+
+{% highlight bash %}
+[webhook] 2019/12/29 19:55:33 [5f95ff] incoming HTTP request from 10.0.0.117:38598
+[webhook] 2019/12/29 19:55:33 [5f95ff] scale-wildfly got matched
+[webhook] 2019/12/29 19:55:33 [5f95ff] scale-wildfly hook triggered successfully
+[webhook] 2019/12/29 19:55:33 200 | 130.171µs | monitor.mmagnani.lab:9000 | POST /hooks/scale-wildfly 
+[webhook] 2019/12/29 19:55:33 [5f95ff] executing /var/scripts/scale-wildfly.sh (/var/scripts/scale-wildfly.sh) with arguments ["/var/scripts/scale-wildfly.sh"] and environment [] using /var/webhook as cwd
+[webhook] 2019/12/29 19:55:36 [5f95ff] command output: [domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8:add(auto-start=true,socket-binding-port-offset=500,group=marketing)
+{
+    "outcome" => "success",
+    "result" => undefined,
+    "server-groups" => undefined
+}
+[domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8/system-property=jboss.node.name:add(value=node-marketing-8)
+{
+    "outcome" => "success",
+    "result" => undefined,
+    "server-groups" => undefined
+}
+[domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8/system-property=wildfly.balancer.name:add(value=marketing-lb)
+{
+    "outcome" => "success",
+    "result" => undefined,
+    "server-groups" => undefined
+}
+[domain@10.0.0.68:9990 /] /host=slave0/server=server-marketing-8:start
+{
+    "outcome" => "success",
+    "result" => "STARTING"
+}
+[domain@10.0.0.68:9990 /] 
+[webhook] 2019/12/29 19:55:36 [5f95ff] finished handling scale-wildfly
+{% highlight %}
+
+A new instance has been created and our application is available again:
+
+![](/images/201912-hawildfly-29.png)
+
+![](/images/201912-hawildfly-30.png)
+
+With this we have met our goal of having an elastic, scaling environment automatically based on events.
+
+Any questions or suggestions let me know!
 
 Best,
