finish wildfly post

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -426,7 +426,7 @@ Our endpoint that performs environment scaling will be triggered:
 }
 [domain@10.0.0.68:9990 /] 
 [webhook] 2019/12/29 19:55:36 [5f95ff] finished handling scale-wildfly
-{% highlight %}
+{% endhighlight %}
 
 A new instance has been created and our application is available again:
 
