--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -393,42 +393,7 @@ When we stop instances the application will be "down" and our alert will be firi
 
 ![](/images/201912-hawildfly-28.png)
 
-Our endpoint that performs environment scaling will be triggered:
-
-{% highlight bash %}
-[webhook] 2019/12/29 19:55:33 [5f95ff] incoming HTTP request from 10.0.0.117:38598
-[webhook] 2019/12/29 19:55:33 [5f95ff] scale-wildfly got matched
-[webhook] 2019/12/29 19:55:33 [5f95ff] scale-wildfly hook triggered successfully
-[webhook] 2019/12/29 19:55:33 200 | 130.171µs | monitor.mmagnani.lab:9000 | POST /hooks/scale-wildfly 
-[webhook] 2019/12/29 19:55:33 [5f95ff] executing /var/scripts/scale-wildfly.sh (/var/scripts/scale-wildfly.sh) with arguments ["/var/scripts/scale-wildfly.sh"] and environment [] using /var/webhook as cwd
-[webhook] 2019/12/29 19:55:36 [5f95ff] command output: [domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8:add(auto-start=true,socket-binding-port-offset=500,group=marketing)
-{
-    "outcome" => "success",
-    "result" => undefined,
-    "server-groups" => undefined
-}
-[domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8/system-property=jboss.node.name:add(value=node-marketing-8)
-{
-    "outcome" => "success",
-    "result" => undefined,
-    "server-groups" => undefined
-}
-[domain@10.0.0.68:9990 /] /host=slave0/server-config=server-marketing-8/system-property=wildfly.balancer.name:add(value=marketing-lb)
-{
-    "outcome" => "success",
-    "result" => undefined,
-    "server-groups" => undefined
-}
-[domain@10.0.0.68:9990 /] /host=slave0/server=server-marketing-8:start
-{
-    "outcome" => "success",
-    "result" => "STARTING"
-}
-[domain@10.0.0.68:9990 /] 
-[webhook] 2019/12/29 19:55:36 [5f95ff] finished handling scale-wildfly
-{% endhighlight %}
-
-A new instance has been created and our application is available again:
+Our endpoint that performs environment scaling will be triggered and a new instance has been created. The application is available again:
 
 ![](/images/201912-hawildfly-29.png)
 
