finish wildfly post

--- a/_posts/2019-12-23-wildfly-ha-4.md
+++ b/_posts/2019-12-23-wildfly-ha-4.md
@@ -363,7 +363,7 @@ WantedBy=multi-user.target
 
 [root@monitor ~]# vi /etc/prometheus/prometheus.yml
 rule_files:
-  - 'prometheus.rules.yml
+  - 'prometheus.rules.yml'
 alerting:
   alertmanagers:
   - static_configs:
