finish wildfly post

--- a/_drafts/2019-12-29-okd-311.md
+++ b/_drafts/2019-12-29-okd-311.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Openshift OKD 3.11 - Setting up a High Availability Environment-#WIP
+title: Openshift OKD 3.11 - Setting up a High Availability Environment- Part 1
 tags: [okd, openshift, devops, redhat, centos, ha]
 comments: true
 ---
@@ -59,9 +59,7 @@ As I want to show how to create a productive environment, I will configure the "
 Prerequisites:
 
 * The servers below must have CentOS 7.7 installed 
-
-* DNS needs to be working perfectly. The servers need to talk to each other using "names".
-
+* DNS needs to be working. The servers need to talk to each other using "names".
 * An extra disk attached to the server.
 
  I will use the following servers:
@@ -220,7 +218,7 @@ deployment_type=origin
 openshift_master_default_subdomain=cloudapps.mmagnani.lab
 
 openshift_master_cluster_method=native
-openshift_master_cluster_hostname=openshift-cluster.mmagnani.lab
+openshift_master_cluster_hostname=openshift-cluster-internal.mmagnani.lab
 openshift_master_cluster_public_hostname=openshift-cluster.mmagnani.lab
 
 osm_use_cockpit=true
@@ -270,13 +268,14 @@ Now create the entries for DNS, this is very important.
 
 For the parameter "openshift_master_default_subdomain=cloudapps.mmagnani.lab, should be creating a "wildcard" pointing to where the routers will be deployed, which in this case will be infra-01 and infra-02.
 
-*.cloudapps - 10.0.0.85 and 10.0.0.86
+* "*.cloudapps - 10.0.0.85 and 10.0.0.86"
 
-For the parameters "openshift_master_cluster_hostname=openshift-cluster.mmagnani.lab" and "openshift_master_cluster_public_hostname=openshift-cluster.mmagnani.lab" 
+For the parameters "openshift_master_cluster_hostname=openshift-cluster-internal.mmagnani.lab" and "openshift_master_cluster_public_hostname=openshift-cluster.mmagnani.lab" 
 
 You must create an entry pointing to the name "balancer.mmagnani.lab"
 
-openshift-cluster.mmagnani.lab - 10.0.0.87
+* "openshift-cluster.mmagnani.lab - 10.0.0.87"
+* "openshift-cluster-internal.mmagnani.lab - 10.0.0.87"
 
 Now you are probably ready to begin the installation of Openshift. Run the "prerequisites" playbook:
 
@@ -294,4 +293,18 @@ If all went well, run the installation playbook:
 [root@bastion ~]#  ansible-playbook playbooks/deploy_cluster.yml
 {% endhighlight %}
 
-Best,#WIP
+In the end you should see something like:
+
+
+
+Make sure all nodes are in "Ready" status:
+
+{% highlight bash %}
+[root@bastion ~]# ansible masters[0] -b -m fetch -a "src=/root/.kube/config dest=/root/.kube/config flat=yes"
+[root@bastion ~]# oc whoami
+[root@bastion ~]# oc get nodes
+{% endhighlight %}
+
+Openshift OKD has been successfully installed! In the next part we will look at how to add persistence and check the health of key components.
+
+Best,
