--- a/_posts/2020-01-04-k8s-ha-1.md
+++ b/_posts/2020-01-04-k8s-ha-1.md
@@ -249,7 +249,7 @@ In the application it is also possible to add object to the session:
 
 All files are available in the repository: https://github.com/msmagnanijr/wildfly18-kubeping.git
 
-## Issue Kubernetes 1.17
+## Issue on Kubernetes 1.17
 
 Unfortunately these settings will not work in Kubernetes 1.17 as there is a mismatch between TLS 1.3 Kubernetes/Golang and TLS 1.2 from Java/WildFly. In the logs you will see something like this:
 
