--- a/_posts/2020-01-07-okd-311.md
+++ b/_posts/2020-01-07-okd-311.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Openshift OKD 3.11 - Setting up a High Availability Environment- Part 1
+title:  Build your own Openshift OKD 3.11 Lab - Part 1
 tags: [okd, openshift, devops, redhat, centos, ha]
 comments: true
 ---
@@ -54,24 +54,21 @@ Briefly we can visualize the following flow:
 
 As I said earlier, OpenShift can be installed on many platforms, so for this article's tests we will use oVirt. [oVirt](https://www.ovirt.org) is a free open-source virtualization platform.
 
-As I want to show how to create a productive environment, I will configure the "HA" of the management layer (Master) and also the "HA" of the application layer (Router).
+As I want to show how to create a lab environment, I will not configure HA for the management layer (Master) but I will configure the "HA" of the application layer (Router) for learning purposes.
 
 Prerequisites:
 
-* The servers below must have CentOS 7.7 installed 
+* The servers must have CentOS 7.7 installed 
 * DNS needs to be working. The servers need to talk to each other using "names".
 * An extra disk attached to the server.
 
  I will use the following servers:
 
  * master-01.mmagnani.lab - 10.0.0.80
- * master-02.mmagnani.lab - 10.0.0.81
- * master-03.mmagnani.lab - 10.0.0.82
- * node-01.mmagnani.lab   - 10.0.0.83
- * node-02.mmagnani.lab   - 10.0.0.84
- * infra-01.mmagnani.lab  - 10.0.0.85
- * infra-02.mmagnani.lab  - 10.0.0.86
- * balancer.mmagnani.lab  - 10.0.0.87
+ * node-01.mmagnani.lab   - 10.0.0.81
+ * node-02.mmagnani.lab   - 10.0.0.82
+ * infra-01.mmagnani.lab  - 10.0.0.83
+ * infra-02.mmagnani.lab  - 10.0.0.84
  * bastion.mmagnani.lab   - 10.0.0.116
 
 We will execute all commands from the "bastion.mmagnani.lab" server, as the name already says it will be our central execution point. The first step of course is to install Ansible and create our inventory so that commands can be executed on all nodes:
@@ -85,33 +82,23 @@ We will execute all commands from the "bastion.mmagnani.lab" server, as the name
 
 [all]
 master-01.mmagnani.lab
-master-02.mmagnani.lab
-master-03.mmagnani.lab
 node-01.mmagnani.lab
 node-02.mmagnani.lab
 infra-01.mmagnani.lab
 infra-02.mmagnani.lab
-balancer.mmagnani.lab
 
 [root@bastion ~]# ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa
 [root@bastion ~]# ssh-copy-id master-01.mmagnani.lab
-[root@bastion ~]# ssh-copy-id master-02.mmagnani.lab
-[root@bastion ~]# ssh-copy-id master-03.mmagnani.lab
 [root@bastion ~]# ssh-copy-id node-01.mmagnani.lab 
 [root@bastion ~]# ssh-copy-id node-02.mmagnani.lab 
 [root@bastion ~]# ssh-copy-id infra-01.mmagnani.lab 
-[root@bastion ~]# ssh-copy-id infra-02.mmagnani.lab 
-[root@bastion ~]# ssh-copy-id balancer.mmagnani.lab 
+[root@bastion ~]# ssh-copy-id infra-02.mmagnani.lab
 {% endhighlight %}
 
 We now have access to execute commands on all nodes using Ansible. You can test by pinging:
 
 {% highlight bash %}
 [root@bastion ~]# ansible all -i inventory -m ping
-master-02.mmagnani.lab | SUCCESS => {
-    "changed": false, 
-    "ping": "pong"
-}
 node-01.mmagnani.lab | SUCCESS => {
     "changed": false, 
     "ping": "pong"
@@ -124,15 +111,7 @@ infra-02.mmagnani.lab | SUCCESS => {
     "changed": false, 
     "ping": "pong"
 }
-balancer.mmagnani.lab | SUCCESS => {
-    "changed": false, 
-    "ping": "pong"
-}
 node-02.mmagnani.lab | SUCCESS => {
-    "changed": false, 
-    "ping": "pong"
-}
-master-03.mmagnani.lab | SUCCESS => {
     "changed": false, 
     "ping": "pong"
 }
@@ -205,7 +184,6 @@ Now one of the most important steps. Configure "/etc/ansible/hosts" that defines
 masters
 nodes
 etcd
-lb
 
 [OSEv3:vars]
 
@@ -217,9 +195,7 @@ deployment_type=origin
 
 openshift_master_default_subdomain=cloudapps.mmagnani.lab
 
-openshift_master_cluster_method=native
-openshift_master_cluster_hostname=openshift-cluster-internal.mmagnani.lab
-openshift_master_cluster_public_hostname=openshift-cluster.mmagnani.lab
+openshift_master_cluster_hostname=master-01.mmagnani.lab
 
 osm_use_cockpit=true
 openshift_clock_enabled=true
@@ -241,21 +217,12 @@ openshift_router_selector='node-role.kubernetes.io/infra=true'
 
 [masters]
 master-01.mmagnani.lab
-master-02.mmagnani.lab
-master-03.mmagnani.lab
 
 [etcd]
 master-01.mmagnani.lab
-master-02.mmagnani.lab
-master-03.mmagnani.lab
-
-[lb]
-balancer.mmagnani.lab
 
 [nodes]
 master-01.mmagnani.lab openshift_node_group_name='node-config-master'
-master-02.mmagnani.lab openshift_node_group_name='node-config-master'
-master-03.mmagnani.lab openshift_node_group_name='node-config-master'
 node-01.mmagnani.lab openshift_node_group_name='node-config-compute'
 node-02.mmagnani.lab openshift_node_group_name='node-config-compute'
 infra-01.mmagnani.lab openshift_node_group_name='node-config-infra'
@@ -276,7 +243,8 @@ You must create an entry pointing to the name "balancer.mmagnani.lab"
 
 * "openshift-cluster.mmagnani.lab - 10.0.0.87"
 * "openshift-cluster-internal.mmagnani.lab - 10.0.0.87"
-
+master-02.mmagnani.lab openshift_node_group_name='node-config-master'
+master-03.mmagnani.lab openshift_node_group_name='node-config-master'
 Now you are probably ready to begin the installation of Openshift. Run the "prerequisites" playbook:
 
 {% highlight bash %}
