--- a/_posts/2020-01-07-tekton.md
+++ b/_posts/2020-01-07-tekton.md
@@ -20,15 +20,15 @@ This is an example to demonstrate how an integration of [Tekton VSCode Plugin](h
 
 - Development Environment, work in your application code and monitor the pipeline run in the same screen:
 
-![](images/intro1.gif)
+![](/images/intro1.gif)
 
 - Follow up the `PipelineRun` progress at `Pipeline View` in Developer Mode at `Openshift 4.2+`:
 
-![](images/intro2.gif)
+![](/images/intro2.gif)
 
 - Let the microservice dependencies be automatically created and deployed by it  own pipeline. The application is created using Quarkus by [Burr Sutter](https://github.com/burrsutter) and can be found at https://github.com/burrsutter/blue-green-canary
 
-![](images/intro3.gif)
+![](/images/intro3.gif)
 
 ### Pre Requisites
 
