--- a/_posts/2020-01-06-tekton.md
+++ b/_posts/2020-01-06-tekton.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Go to next level on CI/CD with Openshift Pipelines
+title:  Go to Next Level on CI/CD with Openshift Pipelines
 tags: [okd, openshift, devops, redhat, centos, ha]
 comments: true
 ---
