--- a/_posts/2020-01-06-tekton.md
+++ b/_posts/2020-01-06-tekton.md
@@ -15,7 +15,7 @@ But what about the "Openshift Pipelines"?
 
 For more details check the [docs](https://openshift.github.io/pipelines-docs/docs/docs/0.8/index.html). 
 
-This is an example to demonstrate how an integration of [Tekton VSCode Plugin](https://github.com/redhat-developer/vscode-tekton), [Quarkus](https://quarkus.io/) , [Tekton](https://github.com/tektoncd/pipeline) and [Openshift Pipelines](https://github.com/openshift/tektoncd-pipeline) can be very productive for Developers. 
+This is an [example](https://github.com/msmagnanijr/tdc-tekton) to demonstrate how an integration of [Tekton VSCode Plugin](https://github.com/redhat-developer/vscode-tekton), [Quarkus](https://quarkus.io/) , [Tekton](https://github.com/tektoncd/pipeline) and [Openshift Pipelines](https://github.com/openshift/tektoncd-pipeline) can be very productive for Developers. 
 
 - Development Environment, work in your application code and monitor the pipeline run in the same screen:
 
