--- a/_posts/2019-12-18-wildfly-ha-1.md
+++ b/_posts/2019-12-18-wildfly-ha-1.md
@@ -5,20 +5,18 @@ tags: [jboss, wildfly, ha, redhat, centos, modcluster]
 comments: true
 ---
 
-Currently the Java platform is one of the most consolidated in the world, much of this is due to
-platform's ability to support other languages such as Kotlin, Groovy and Scala, etc. Thousands of web and mobile applications are developed each month using the platform as a base. The Java platform has changed a lot in recent years and probably will keep evolving more and more.
+Currently the Java platform is one of the most consolidated in the world, much of this is due to platform's ability to support other languages such as Kotlin, Groovy and Scala, etc. Thousands of web and mobile applications are developed using the platform as a base. The Java platform has changed a lot in recent years and probably will keep evolving.
 
-In parallel with these changes, we see the evolution "application servers", that increasingly offer highly complex features such as load balancing components, smart asynchronous messaging, transaction control and many other technologies facilitating application development and standardization. They also provide a stable and scalable infrastructure for mission critical applications. One of the biggest challenges for application servers is to couple highly complex services, making them stable and flexible.
+In parallel with these changes, we see the evolution application servers, that increasingly offer highly complex features such as load balancing components, smart asynchronous messaging, transaction control and many other technologies facilitating application development and standardization. They also provide a stable and scalable infrastructure for mission critical applications. One of the biggest challenges for application servers is to couple highly complex services, making them stable and flexible.
 
-If you want a high availability, scalable environment with no vendor lock-in, Wildfly is a great option: [WildFly.](https://wildfly.org/)
+If you want a high availability, scalable environment with no vendor lock-in, [WildFly](https://wildfly.org/) is an open source community option. 
 
-##  Wildfly 18
+##  Wildfly
 
 WildFly is an open source application server that is 100% compliant with the Java EE EE 8 specification. In previous versions of Java EE even using only a few technologies for application development, we were required to deal with all the features deployed on the server. . To solve this problem from Java EE 6, the concept of profile was inserted, which aims to create configurations with specific responsibilities, such as the Web Profile that has technologies for web development.
 
 In this architecture we will use Wildfly with the "full-ha" profile to meet our Clustering and Balancing needs.
 
-Docs: [docs.wildfly.org](https://docs.wildfly.org/18)
 
 ## Domain Mode x Standalone Mode
 
@@ -26,7 +24,7 @@ Wildfly has two types of architecture known as "Standalone Mode" and "Domain Mod
 
 The major problem with using Standalone Mode is decentralized administration which can cause a lot of headache when replicating the settings on each server.
 
-To solve this problem we have Domain Mode in which all configurations are centralized in a component known as "Master" and the servers are distributed in the "Slaves" using the configurations obtained from the connection between "Master" and "Slave".
+To solve this problem we have Domain Mode in which all configurations are centralized in a component known as master and the servers are distributed in the subordinates using the configurations obtained from the connection between master and subordinate.
 
 When we start Wildfly in Domain Mode in the default configuration we have at least four processes. One Host Controller, one Process Controller and two Servers.
 
@@ -46,11 +44,11 @@ Among the benefits of using Domain Mode we can cite include:
 * Centralized maintenance;
 * High availability management
 
-You can find more information in the administration guide: [docs.wildfly.org](https://docs.wildfly.org/18/Admin_Guide.html)
+You can find more information in the [administration guide](https://docs.wildfly.org/20/Admin_Guide.html)
 
 ## Architecture
 
-We will use two servers with "keepalived" + VIP to achieve high availability of "Apache Web Servers". In addition we will use a Domain to act as Master and another as Backup and to support our applications, two host controllers with two servers each, totaling four Wildfly instances.
+We will use two servers with keepalived + VIP to achieve high availability with Apache Web Servers. In addition we will use a Domain to act as master and another as Backup and to support our applications, two host controllers with two servers each, totaling four Wildfly instances.
 
 You can see our architecture in the following image:
 
@@ -59,16 +57,16 @@ You can see our architecture in the following image:
 
 All this "lab" is running on the very reliable "oVirt" virtualization platform. You can learn more about oVirt here: [ovirt.org](https://www.ovirt.org)
 
-![](/images/201912-hawildfly-01.png)
+![](/images/201912-hawildfly-01.gif)
 
 
 # Configuring Keepalive with Apache WebServer
 
 Let's get started by installing and configuring Keepalived and Apache Web Server high availability, and of course getting the Mod Cluster setup ready. These settings will be performed on the following servers:
 
-* apache-httpd-01.mmagnani.lab - 10.0.0.93
-* apache-httpd-02.mmagnani.lab - 10.0.0.94
-* VIP - 10.0.0.90
+* apache-httpd-01.mmagnani.lab - 10.0.0.191
+* apache-httpd-02.mmagnani.lab - 10.0.0.192
+* VIP - 10.0.0.190
 
 To make it easier to understand where I am executing each command, I will use the prefix of the servers on each line.
 
